fix: aspect ratio not working on mobile device

--- a/index.css
+++ b/index.css
@@ -356,7 +356,7 @@ select {
 /* main page to be behind the navigation when nav is open*/
 .main-hide-js {
     position: relative;
-   z-index: -1;
+    z-index: -1;
 }
 
 .main-content {
@@ -372,7 +372,6 @@ select {
     padding: 2em;
     display: grid;
     place-items: center;
-    aspect-ratio: 1;
     font-size: 1.25rem;
     border-radius: 50%;
     border: none;
@@ -381,6 +380,8 @@ select {
     margin-block: 2.5rem;
     transition: all 500ms ease-in-out;
     aspect-ratio: 1;
+    min-width: 9.375rem;
+    min-height: 9.375rem;
 }
 
 .btn:hover,
@@ -619,8 +620,8 @@ select {
         margin-inline: auto;
     }
 
-    .main-hide-js {       
-       z-index: 1;
+    .main-hide-js {
+        z-index: 1;
     }
 
     .main-content {
